<?xml version="1.0" encoding="UTF-8"?>
<project name="javaLauncher" default="default" basedir=".">

  <property name="jcef.version" value="84.3.8-gc8a556f-chromium-84.0.4147.105-api-1.2"/>

  <property environment="env"/>
  <property name="out.native.path" value="${env.OUT_NATIVE_PATH}"/>
  <property name="out.path"   value="${env.OUT_PATH}"/>
  <property name="out.name"   value="${env.OUT_NAME}"/>
  <property name="out.id"     value="${env.OUT_ID}"/>
  <property name="out.mainclass" value="${env.OUT_MAINCLASS}"/>

  <condition property="jdk11.jvm.opts"
             value="--module-path third_party/jogamp/jar --add-modules jogl.all,gluegen.rt --add-exports jogl.all/com.jogamp.nativewindow=jcef --add-exports jogl.all/com.jogamp.opengl.awt=jcef --add-exports jogl.all/com.jogamp.opengl.util=jcef --add-exports jogl.all/com.jogamp.opengl=jcef --add-exports java.desktop/sun.awt=jcef --add-exports java.desktop/java.awt.peer=jcef --add-exports java.desktop/sun.lwawt.macosx=jcef --add-exports java.desktop/sun.lwawt=jcef"
             else="">
    <matches pattern="11.*" string="${java.version}"/>
  </condition>

  <condition property="include.module-info.class"
             value="module-info.class"
             else="">
    <matches pattern="11.*" string="${java.version}"/>
  </condition>

  <condition property="exclude.module-info.java"
             value="module-info.java"
             else="">
    <matches pattern="1.8.*" string="${java.version}"/>
  </condition>

  <condition property="exclude.source.mac"
             value=""
             else="org/cef/browser/mac/CefBrowserWindowMac.java">
    <os family="mac"/>
  </condition>

  <condition property="jcef.native.lib"
             value="${out.path}/libjcef.dylib">
    <os family="mac"/>
  </condition>
  <condition property="jcef.native.lib"
             value="${out.native.path}/libjcef.so">
    <os family="unix"/>
  </condition>
  <condition property="jcef.native.lib"
             value="${out.native.path}/jcef.dll">
    <os family="windows"/>
  </condition>

  <taskdef name="bundleapp"
      classname="com.oracle.appbundler.AppBundlerTask"   
      classpath="third_party/appbundler/appbundler-1.0.jar" />
    
  <path id="class.path">
    <fileset dir="third_party/jogamp/jar">
      <include name="gluegen-rt.jar"/>
      <include name="gluegen-rt-natives-macosx-universal.jar"/>
      <include name="jogl-all.jar"/>
      <include name="jogl-all-natives-macosx-universal.jar"/>
    </fileset>
  </path>

  <path id="class.path.tests">
    <fileset dir="third_party/junit" includes="junit-platform-console-standalone-1.4.2.jar"/>
    <fileset dir="third_party/jakarta" includes="jakarta.xml.bind-api-2.3.2.jar"/>
    <fileset dir="${out.path}" includes="jcef.jar"/>
  </path>

  <target name="compile">
    <mkdir dir="${out.path}"/>
    <javac encoding="UTF8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" destdir="${out.path}"
           fork="true" memoryinitialsize="32m" memorymaximumsize="128m" includeJavaRuntime="yes">
      <compilerarg line="-XDignore.symbol.file ${jdk11.jvm.opts}"/>
      <classpath refid="class.path"/>
      <src path="java/"/>
      <include name="**/*.java"/>
      <exclude name="${exclude.source.mac}"/>
      <exclude name="tests/**"/>
      <exclude name="${exclude.module-info.java}"/>
    </javac>
    <copy todir="${out.path}">
      <fileset dir="java" casesensitive="no">
        <exclude name="**/*.java" />
      </fileset>
    </copy>
  </target>

  <!-- Workaround for building junit tests without using module-info -->
  <target name="compile.tests">
    <mkdir dir="${out.path}/tmp"/>
    <mkdir dir="${out.path}/tests"/>
    <!--  Javac will always recompile the tests due to https://ant.apache.org/faq.html#always-recompiles -->
    <javac encoding="UTF8" nowarn="on" deprecation="off" debug="on" includeantruntime="false" fork="true"
           destdir="${out.path}/tmp">
      <classpath refid="class.path.tests"/>
      <src path="java_tests/tests/"/>
      <include name="**/*.java"/>
    </javac>
    <move file="${out.path}/tmp/tests" tofile="${out.path}/tests"/>
    <delete dir="${out.path}/tmp"/>
  </target>

  <target name="jar" depends="compile">
    <mkdir dir="${out.path}"/>
    <echo message="${jcef.version}" file="${out.path}/com/jetbrains/cef/version.info" append="false"/>
    <jar destfile="${out.path}/jcef.jar" index="true" update="false">
      <fileset dir="${out.path}">
        <include name="org/cef/**"/>
        <include name="com/jetbrains/**"/>
        <include name="${include.module-info.class}"/>
      </fileset>
    </jar>
    <jar destfile="${out.path}/jcef-sources.jar" index="true" update="false">
      <fileset dir="java">
        <include name="org/cef/**"/>
        <include name="com/jetbrains/**"/>
      </fileset>
    </jar>
  </target>

  <target name="tests-jar" depends="compile.tests">
    <mkdir dir="${out.path}"/>
    <jar destfile="${out.path}/jcef-tests.jar" index="true" update="false">
      <fileset dir="${out.path}">
        <include name="tests/**"/>
        <include name="com/**"/>
      </fileset>
    </jar>
  </target>

  <target name="modular-sdk" depends="jar, tests-jar">
    <mkdir dir="${out.path}/modular-sdk"/>
    <mkdir dir="${out.path}/modular-sdk/make/jcef"/>
    <copy file="jb/tools/common/modular-sdk-build-properties.txt" tofile="${out.path}/modular-sdk/make/jcef/build.properties"/>
    <mkdir dir="${out.path}/modular-sdk/modules/jcef/org"/>
    <copy todir="${out.path}/modular-sdk/modules/jcef/org">
      <fileset dir="${out.path}/org" includes="**"/>
    </copy>
    <mkdir dir="${out.path}/modular-sdk/modules/jcef/com"/>
    <copy todir="${out.path}/modular-sdk/modules/jcef/com">
      <fileset dir="${out.path}/com" includes="**"/>
    </copy>
    <mkdir dir="${out.path}/modular-sdk/modules_libs/jcef"/>
    <copy todir="${out.path}/modular-sdk/modules_libs/jcef">
      <file name="${jcef.native.lib}"/>
    </copy>
    <mkdir dir="${out.path}/modular-sdk/modules_src/jcef"/>
    <copy todir="${out.path}/modular-sdk/modules_src/jcef">
      <fileset dir="java" includes="module-info.java"/>
    </copy>
  </target>

  <target name="bundle" depends="jar, modular-sdk">
    <mkdir dir="${out.path}"/>
    <bundleapp outputdirectory="${out.path}"
                          name="${out.name}"
                   displayname="${out.name}"
                    identifier="${out.id}"
                 mainclassname="${out.mainclass}"
                          icon="third_party/cef/res/CefIcon.icns">
      <runtime dir="${env.JAVA_HOME}"/>
      <classpath dir="${out.path}">
        <include name="jcef.jar"/>
        <include name="jcef-tests.jar"/>
      </classpath>
      <classpath dir="third_party/jogamp/jar/">
        <include name="gluegen-rt.jar"/>
        <include name="gluegen-rt-natives-macosx-universal.jar" />
        <include name="jogl-all.jar" />
        <include name="jogl-all-natives-macosx-universal.jar" />
      </classpath>
      <classpath dir="third_party/junit" includes="junit*.jar"/>
      <option value="-Djava.library.path=$APP_ROOT/Contents/Java/:$APP_ROOT/Contents/Frameworks/Chromium Embedded Framework.framework/Libraries" />
    </bundleapp>
  </target>
</project>
